--- a/BFWikiScrapper/BFWikiScrapper.csproj
+++ b/BFWikiScrapper/BFWikiScrapper.csproj
@@ -10,6 +10,7 @@
 
     <ItemGroup>
         <PackageReference Include="AngleSharp" Version="1.3.1-beta.491"/>
+        <PackageReference Include="Spectre.Console" Version="0.51.2-preview.0.3"/>
     </ItemGroup>
 
 </Project>
